crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

typedef uint16_t SPCompressionCode;
/**
 * A vector of bits
 *
 * # Examples
 * ```C
 * SPBitVec vec = sp_bit_vec_new(8);
 * sp_bit_vec_set(vec, 5, true);
 * sp_bit_vec_free(vec);
 * ```
 */
typedef struct SPBitVec SPBitVec;
/**
 * A low-level display command.
 *
 * This struct and associated functions implement the UDP protocol for the display.
 *
 * To send a `SPCommand`, use a `SPConnection`.
 *
 * # Examples
 *
 * ```C
 * sp_connection_send_command(connection, sp_command_clear());
 * sp_connection_send_command(connection, sp_command_brightness(5));
 * ```
 */
typedef struct SPCommand SPCommand;
/**
 * A C-wrapper for grid containing codepage 437 characters.
 *
 * The encoding is currently not enforced.
 *
 * # Examples
 *
 * ```C
 * Cp437Grid grid = sp_cp437_grid_new(4, 3);
 * sp_cp437_grid_fill(grid, '?');
 * sp_cp437_grid_set(grid, 0, 0, '!');
 * sp_cp437_grid_free(grid);
 * ```
 */
typedef struct SPCp437Grid SPCp437Grid;
/**
 * The raw packet
 */
typedef struct SPPacket SPPacket;
/**
 * A grid of pixels.
 *
 * # Examples
 *
 * ```C
 * Cp437Grid grid = sp_pixel_grid_new(8, 3);
 * sp_pixel_grid_fill(grid, true);
 * sp_pixel_grid_set(grid, 0, 0, false);
 * sp_pixel_grid_free(grid);
 * ```
 */
typedef struct SPPixelGrid SPPixelGrid;
/**
 * Sets a window of pixels to the specified values.
 *
 * The passed `SPPixelGrid` gets consumed.
 *
 * Returns: a new `Command::BitmapLinearWin` instance. Will never return NULL.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `pixel_grid` points to a valid instance of `SPPixelGrid`
 * - `pixel_grid` is not used concurrently or after this call
 * - `compression` matches one of the allowed enum values
 * - the returned `SPCommand` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_free`.
 */
struct SPCommand *sp_command_bitmap_linear_win(size_t x,
                                               size_t y,
                                               struct SPPixelGrid *pixel_grid,
                                               SPCompressionCode compression_code);
/**
 * Set pixel data according to a xor-mask starting at the offset.
 *
 * The screen will continuously overwrite more pixel data without regarding the offset, meaning
 * once the starting row is full, overwriting will continue on column 0.
 *
 * The contained `SPBitVec` is always uncompressed.
 *
 * The passed `SPBitVec` gets consumed.
 *
 * Returns: a new `Command::BitmapLinearXor` instance. Will never return NULL.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `bit_vec` points to a valid instance of `SPBitVec`
 * - `bit_vec` is not used concurrently or after this call
 * - `compression` matches one of the allowed enum values
 * - the returned `SPCommand` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_free`.
 */
struct SPCommand *sp_command_bitmap_linear_xor(size_t offset,
                                               struct SPBitVec *bit_vec,
                                               SPCompressionCode compression);
/**
 * Set all pixels to the off state.
 *
 * Does not affect brightness.
 *
 * Returns: a new `Command::Clear` instance. Will never return NULL.
 *
 * # Examples
 *
 * ```C
 * sp_connection_send_command(connection, sp_command_clear());
 * ```
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned `SPCommand` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_free`.
 */
struct SPCommand *sp_command_clear(void);
/**
 * Show text on the screen.
 *
 * <div class="warning">
 *     The library does not currently convert between UTF-8 and CP-437.
 *     Because Rust expects UTF-8 strings, it might be necessary to only send ASCII for now.
 * </div>
 *
 * The passed `SPCp437Grid` gets consumed.///
 *
 * Returns: a new `Command::Cp437Data` instance. Will never return NULL.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `grid` points to a valid instance of `SPCp437Grid`
 * - `grid` is not used concurrently or after this call
 * - the returned `SPCommand` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_free`.
 */
struct SPCommand *sp_command_cp437_data(size_t x,
                                        size_t y,
                                        struct SPCp437Grid *grid);
/**
 * Deallocates a `SPCommand`.
 *
 * # Examples
 *
 * ```C
 * SPCommand c = sp_command_clear();
 * sp_command_free(c);
 * ```
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPCommand`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `SPPacket`
 */
void sp_command_free(struct SPCommand *ptr);